# logchef

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  config.sample.toml  config.toml  flake.nix  go.mod  go.sum  live-tail-plan.md  prd-production-grade-logging-workflow.md  renovate.json  roadmap-alert.md  rust-toolchain.toml  spec.md  sqlc.yaml  vl-spec-continue.md
.cursor/rules/: logchef-basics.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: crawl-qa.yml  deploy-docs.yml  docs-smoke-test.yml  frontend-tests.yml  go-tests.yml  release.yml  rust-cli.yml  rust-release.yml
cli/: .gitignore  Cargo.toml
cli/crates/logchef-cli/: Cargo.toml
cli/crates/logchef-cli/skill/: SKILL.md
cli/crates/logchef-cli/skill/references/: logsql-victorialogs.md
cli/crates/logchef-cli/src/: banner.rs  cli.rs  env_flags.rs  main.rs  session.rs  ui.rs  update.rs
cli/crates/logchef-cli/src/commands/: auth.rs  collections.rs  completions.rs  config.rs  doctor.rs  explain.rs  fields.rs  find.rs  histogram.rs  history.rs  mod.rs  open.rs  query.rs  saved_queries.rs  schema.rs  skills.rs  sources.rs  sql.rs  tail.rs  teams.rs  whoami.rs
cli/crates/logchef-core/: Cargo.toml
cli/crates/logchef-core/src/: cache.rs  error.rs  lib.rs  timerange.rs
cli/crates/logchef-core/src/api/: mod.rs  models.rs
cli/crates/logchef-core/src/auth/: mod.rs
cli/crates/logchef-core/src/config/: mod.rs  schema.rs
cli/crates/logchef-core/src/highlight/: mod.rs
cli/scripts/: sync-skill.sh
cmd/logchef/: main.go
cmd/server/: web.go
dashboards/: README.md
deployment/docker/: docker-compose.yml  nginx.conf
dev/: README.md  docker-compose.hostnet.yml  docker-compose.yml  http.sql  http.toml  ingest-victorialogs.sh  init-clickhouse.sql  provisioning.toml  seed.sh  smoke_api.py  syslog.toml  victorialogs.toml
dev/alertmanager/: README.md  alertmanager.yml
dev/dex/: config.yaml
dev/e2e/: lib.sh  (+3 more)
docs/: astro.config.mjs  docs.go  package-lock.json  package.json  swagger.json  swagger.yaml
frontend/: .gitignore  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
plans/: victorialogs-testing-next-steps.md
rfcs/: 0001-datasource-architecture-clickhouse-victorialogs.md
(+689 files in other folders)
