[package]
name = "logchef-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LogChef CLI - A sophisticated log viewer for LogChef"

[[bin]]
name = "logchef"
path = "src/main.rs"

[dependencies]
logchef-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
inquire.workspace = true
iana-time-zone.workspace = true
